
 - TODO: If you have a probe at a star, you can now see all other 'orbiting' probes at that star
 - TODO: Allow resources/ships/glyphs/plans to be pushed to ally planets (at a cost of 0.1E/ship)
 - TODO: Allow supply chain to be set up to allied planets
 - TODO: Allow ships to 'stay' at allied planets during a push, they are then owned by that empire.


 - TODO: When viewing 'available' or 'unavailable' fleets to send to a body, select from all possible colonies.
 - TODO: Filter foreign incoming ships status by level of space-port
 - TODO: When removing a scow from a waste chain, it removes waste equivalent to the size of the scow.
 - TODO: Battle logs should show fleets, not ships

3.0865:
 - Mod: Removed option to disable display of incoming ships. (To see if it fixes some resource issues)
 - Mod: Attempt to make Counter Espionage tutorial message clearer since people don't read the entire email.
 - Fix: Stockpile wasn't checking levels properly on downgrade and demolish.
 - Fix: Chains were being recalculated at the wrong time if a swap was being done with it's target.

3.0864:
 - Mod: LCOT cheaper to build, longer to build, and spy proofed.

3.0863:
 - Fix: Stakes no longer will attempt to stake asteroids.
 - Fix: Correctly record empires that exceed rpc/minute

3.0862:
 - Fix: Fixed broken seize method for Parliament.
 - Fix: Checked for an empty argument SQL call.
 
3.0861:
 - Mod: Neutral Zone now enforced via Code.
 - Add: Added water and energy to PCC and SCC Resources details
 - Mod: Resource calculations now work correctly, but the proof is too large to fit in the margin.
 - Mod: Supply chains that stall should no longer cause damage on the sending colony
 - Fix: Glyphs for missions properly checked and used.
 - Add: Supply chains that stall send a message

3.0860:
 - Fix: Scows deliver the amount of waste in their payload, not capacity.
 - Fix: Space Station Command accessible via UI.
 - Fix: Updated API Docs for Trade, Archaeology, PCC, and SCC.